--- a/public/index.html
+++ b/public/index.html
@@ -1,113 +1,100 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width"
-    />
-    <link rel="icon" type="image/x-icon" href="favicon.ico" />
-    <title>Angular Evergreen</title>
-    <style>
-      html,
-      body {
-        height: 100%;
-      }
-    </style>
-    <script>
-      (function(i, s, o, g, r, a, m) {
-        i["GoogleAnalyticsObject"] = r;
-        (i[r] =
-          i[r] ||
-          function() {
-            (i[r].q = i[r].q || []).push(arguments);
-          }),
-          (i[r].l = 1 * new Date());
-        (a = s.createElement(o)), (m = s.getElementsByTagName(o)[0]);
-        a.async = 1;
-        a.src = g;
-        m.parentNode.insertBefore(a, m);
-      })(
-        window,
-        document,
-        "script",
-        "https://www.google-analytics.com/analytics.js",
-        "ga"
-      );
-      ga("create", "UA-117932470-1", "auto");
-      ga("send", "pageview");
-    </script>
-    <link rel="stylesheet" href="css/common.css" />
-    <link
-      href="https://fonts.googleapis.com/css?family=Roboto"
-      rel="stylesheet"
-    />
-  </head>
 
-  <body>
-    <div class="center">
-      <a href="https://thejavascriptpromise.com">
-        <img
-          class="hex"
-          alt="The JavaScript Promise"
-          src="images/jsp_logo.png"
-        />
-      </a>
-      <a href="https://techtalkdc.com" target="_blank">
-        <img class="hex" alt="Tech Talk DC" src="images/ttdc.png" />
-      </a>
-      <a href="https://angularforenterprise.com" target="_blank">
-        <img
-          class="hex"
-          alt="Angular For Enterprise-Ready Web Applications"
-          src="images/angular-for-enterprise.png"
-        />
-      </a>
-    </div>
-    <div class="center">
-      <h1>Angular Evergreen</h1>
-    </div>
-    <div class="center">
-      <h2>
-        <a href="#">
-          <img
-            data-tilt
-            alt="Angular Evergreen"
-            src="images/ng-evergreen-logo.svg"
-          />
-        </a>
-      </h2>
-    </div>
-    <div class="center" style="color: black">
-      <div>Coming soon to VS Code</div>
-    </div>
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width" />
+  <link rel="icon" type="image/x-icon" href="favicon.ico" />
+  <title>Angular Evergreen</title>
+  <style>
+    html,
+    body {
+      height: 100%;
+    }
+  </style>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-141735126-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
 
-    <div class="center">
-      <a href="https://github.com/duluca/angular-evergreen"
-        ><img
-          src="https://img.shields.io/github/forks/duluca/angular-evergreen.svg?style=for-the-badge"
-      /></a>
-      <a href="https://github.com/duluca/angular-evergreen"
-        ><img
-          src="https://img.shields.io/github/stars/duluca/angular-evergreen.svg?style=for-the-badge"
-      /></a>
-      <a href="https://github.com/duluca/angular-evergreen"
-        ><img
-          src="https://img.shields.io/github/license/duluca/angular-evergreen.svg?style=for-the-badge"
-      /></a>
-    </div>
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag('js', new Date());
 
-    <div class="center"></div>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/tilt.js/1.2.1/tilt.jquery.min.js"></script>
-    <script>
-      $(document).ready(function() {
-        if (
-          new Date() >= new Date(2018, 10 - 1, 1) &&
-          new Date() <= new Date(2018, 11 - 1, 9)
-        ) {
-        }
-      });
-    </script>
-  </body>
+    gtag('config', 'UA-141735126-1');
+  </script>
+
+  <link rel="stylesheet" href="css/common.css" />
+  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" />
+</head>
+
+<body>
+  <div class="center">
+    <a href="https://thejavascriptpromise.com" target="_blank">
+      <img class="hex" alt="The JavaScript Promise" src="images/jsp_logo.png" />
+    </a>
+    <a href="https://techtalkdc.com" target="_blank">
+      <img class="hex" alt="Tech Talk DC" src="images/ttdc.png" />
+    </a>
+    <a href="https://angularforenterprise.com" target="_blank">
+      <img class="hex" alt="Angular For Enterprise-Ready Web Applications" src="images/angular-for-enterprise.png" />
+    </a>
+  </div>
+  <div class="center">
+    <h2>
+      <a href="#">
+        <img data-tilt alt="Angular Evergreen" src="images/ng-evergreen-logo.svg" />
+      </a>
+    </h2>
+    <h1>Angular Evergreen</h1>
+    <div>A tool to help developers keep their Angular projects evergreen with periodic update checks and automatic
+      upgrades</div>
+  </div>
+  <div class="center">
+    <a href="vscode:extension/expertly-simple.ng-evergreen" class="button" style="width: 100px;">
+      <img width="24" height="24" src="images/vs-code.svg" />
+      <span>Install</span>
+    </a>
+  </div>
+  <div class="center">
+    <img src="images/ng-evergreen-do-update.gif">
+  </div>
+  <div class="center">
+    <div style="margin-bottom: 8px;">Contributors</div>
+    <a href="https://github.com/duluca"><img class="image-cropper"
+        src="https://avatars2.githubusercontent.com/u/822159?s=460&v=4"></a>
+    <a href="https://github.com/kentonbmax"><img class="image-cropper"
+        src="https://avatars0.githubusercontent.com/u/15804484?s=460&v=4"></a>
+    <a href="https://github.com/brendoncaulkins"><img class="image-cropper"
+        src="https://avatars3.githubusercontent.com/u/32872899?s=460&v=4"></a>
+    <a href="https://github.com/alexhoffman617"><img class="image-cropper"
+        src="https://avatars2.githubusercontent.com/u/2313507?s=460&v=4"></a>
+  </div>
+
+  <div class="center">
+    <div style="margin-bottom: 8px;">Contribute on GitHub</div>
+    <a href="https://github.com/duluca/angular-evergreen"><img
+        src="https://img.shields.io/github/forks/duluca/angular-evergreen.svg?style=for-the-badge" /></a>
+    <a href="https://github.com/duluca/angular-evergreen"><img
+        src="https://img.shields.io/github/stars/duluca/angular-evergreen.svg?style=for-the-badge" /></a>
+    <a href="https://github.com/duluca/angular-evergreen"><img
+        src="https://img.shields.io/github/license/duluca/angular-evergreen.svg?style=for-the-badge" /></a>
+  </div>
+
+  <div class="center">
+    <div>An <a href="https://expertlysimple.io">Expertly Simple</a> Idea</div>
+  </div>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/tilt.js/1.2.1/tilt.jquery.min.js"></script>
+  <script>
+    $(document).ready(function () {
+      if (
+        new Date() >= new Date(2018, 10 - 1, 1) &&
+        new Date() <= new Date(2018, 11 - 1, 9)
+      ) {}
+    });
+  </script>
+</body>
+
 </html>
