fix align and gif responsiveness

--- a/public/index.html
+++ b/public/index.html
@@ -51,15 +51,15 @@
     <div>A tool to help developers keep their Angular projects evergreen with periodic update checks and automatic
       upgrades</div>
   </div>
-  <div class="center">
+  <div style="text-align: -webkit-center" class="center">
     <a href="vscode:extension/expertly-simple.ng-evergreen" class="button" style="width: 100px;">
       <img width="24" height="24" src="images/vs-code.svg" />
-      <span>Install</span>
+      <span style="margin-right:10px">Install</span>
     </a>
   </div>
-  <div class="center">
-    <img src="images/ng-evergreen-do-update.gif">
-  </div>
+  <section class="center">
+    <img src="images/ng-evergreen-do-update.gif" width="100%" height="auto">
+  </section>
   <div class="center">
     <div style="margin-bottom: 8px;">Contributors</div>
     <a href="https://github.com/duluca"><img class="image-cropper"
