Added bjsawyer as contributor

--- a/public/index.html
+++ b/public/index.html
@@ -70,6 +70,8 @@
         src="https://avatars3.githubusercontent.com/u/32872899?s=460&v=4"></a>
     <a href="https://github.com/alexhoffman617"><img class="image-cropper"
         src="https://avatars2.githubusercontent.com/u/2313507?s=460&v=4"></a>
+    <a href="https://github.com/bjsawyer"><img class="image-cropper"
+      src="https://avatars2.githubusercontent.com/u/8974594?s=460&&v=4"></a>
   </div>
 
   <div class="center">
