--- a/public/index.html
+++ b/public/index.html
@@ -77,7 +77,10 @@
       </form>
     </div>
     <section class="center">
-      <img src="images/ng-evergreen-do-update.gif" width="100%" height="auto" />
+      <iframe width="560" height="315"
+        src="https://www.youtube.com/embed/zTvxfv9vUEA?controls=0&autoplay=1&loop=1&playlist=zTvxfv9vUEA"
+        frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture; loop"
+        allowfullscreen></iframe>
     </section>
     <div class="center">
       <div style="margin-bottom: 8px;">Contributors</div>
