--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,8 @@
 <html>
 
 <head>
+  <meta http-equiv="refresh"
+  content="0; url=https://expertlysimple.io/get-evergreen/">
   <meta charset="utf-8" />
   <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width" />
   <link rel="icon" type="image/x-icon" href="favicon.ico" />
@@ -60,82 +62,9 @@
     </a>
   </div>
   <div class="center">
-    <div id="mc_embed_signup">
-      <form
-        action="https://expertlysimple.us11.list-manage.com/subscribe/post?u=893ce78032f02a019effdda32&amp;id=6b61c69b66"
-        method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank"
-        novalidate>
-        <div id="mc_embed_signup_scroll">
-          <label for="mce-EMAIL">Stay in touch</label>
-          <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
-          <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-          <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text"
-              name="b_893ce78032f02a019effdda32_6b61c69b66" tabindex="-1" value=""></div>
-          <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe"
-              class="button"></div>
-        </div>
-      </form>
-    </div>
-    <section class="center">
-      <iframe width="560" height="315"
-        src="https://www.youtube.com/embed/zTvxfv9vUEA?controls=0&autoplay=1&loop=1&playlist=zTvxfv9vUEA"
-        frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture; loop"
-        allowfullscreen></iframe>
-    </section>
-    <div class="center">
-      <div style="margin-bottom: 8px;">Contributors</div>
-      <a href="https://github.com/duluca"><img class="image-cropper"
-          src="https://avatars2.githubusercontent.com/u/822159?s=460&v=4" /></a>
-
-      <a href="https://github.com/kentonbmax"><img class="image-cropper"
-          src="https://avatars0.githubusercontent.com/u/15804484?s=460&v=4" /></a>
-
-      <a href="https://github.com/brendoncaulkins"><img class="image-cropper"
-          src="https://avatars3.githubusercontent.com/u/32872899?s=460&v=4" /></a>
-
-      <a href="https://github.com/alexhoffman617"><img class="image-cropper"
-          src="https://avatars2.githubusercontent.com/u/2313507?s=460&v=4" /></a>
-
-      <a href="https://github.com/bjsawyer"><img class="image-cropper"
-          src="https://avatars2.githubusercontent.com/u/8974594?s=460&&v=4" /></a>
-    </div>
-
-    <div class="center">
-      <div style="margin-bottom: 8px;">Contribute on GitHub</div>
-      <a href="https://github.com/expertly-simple/angular-evergreen"><img
-          src="https://img.shields.io/github/forks/expertly-simple/angular-evergreen.svg?style=for-the-badge" /></a>
-      <a href="https://github.com/expertly-simple/angular-evergreen"><img
-          src="https://img.shields.io/github/stars/expertly-simple/angular-evergreen.svg?style=for-the-badge" /></a>
-      <a href="https://github.com/expertly-simple/angular-evergreen"><img
-          src="https://img.shields.io/github/license/expertly-simple/angular-evergreen.svg?style=for-the-badge" /></a>
-    </div>
-
-    <div class="center">
-      <div>An <a style="color: white" href="https://expertlysimple.io">Expertly Simple</a> Idea</div>
-    </div>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/tilt.js/1.2.1/tilt.jquery.min.js"></script>
-    <script>
-      $(document).ready(function () {
-        if (
-          new Date() >= new Date(2018, 10 - 1, 1) &&
-          new Date() <= new Date(2018, 11 - 1, 9)
-        ) {
-        }
-      });
-    </script>
-    <script type="text/javascript" src="//downloads.mailchimp.com/js/signup-forms/popup/unique-methods/embed.js"
-      data-dojo-config="usePlainJson: true, isDebug: false"></script>
-    <script type="text/javascript">
-      window.dojoRequire(["mojo/signup-forms/Loader"], function (L) {
-        L.start({
-          baseUrl: "mc.us11.list-manage.com",
-          uuid: "893ce78032f02a019effdda32",
-          lid: "6b61c69b66",
-          uniqueMethods: true
-        });
-      });
-    </script>
+    <p>This page has moved to 
+      <a href="https://expertlysimple.io/get-evergreen/">here</a>.
+  </div>
 </body>
 
 
